--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.janadi</groupId>
 	<artifactId>maven-spring-boot-jenkins</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>maven-spring-boot-jenkins</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
